# utils

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
utils/scripts/: merge_pdfs.py
