[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Szymon Palucha <paluchasz@googlemail.com>"]
readme = "readme.md"
packages = [{ include = "utils" }]

[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^3.16.4"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.6.0"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.scripts]
merge_pdfs = "utils.scripts.merge_pdfs:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 150

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_column_numbers = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
extend-select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
]
ignore = ["E402", "B905", "N818", "S101"]
show-fixes = true
line-length = 150
target-version = "py39"
